# SteelDesign

./: CompositeBeam.py  HE-secpropsdimsprops-Eurocode3-UK-25_10_2023.xlsx  KompozitBeam.py  LICENSE  MemberTest.ipynb  RBSDesign.py  README.md  Section.ipynb  Section.py  SteelMemberDesign.py  aisc-shapes-database-v15.0.xlsx  deneme.txt  pyproject.toml  requirements.txt
.github/workflows/: .readthedocs.yaml  IssuesWorkflow.yml  publish-to-test-pypi.yml  test.yml
Examples/: BasePlate.ipynb  CompBeamExample01.ipynb  CompositeBeam.py  DG01_thirdeditionexamples.ipynb  Example12_6.ipynb  Example12_7.ipynb  Example12_8.ipynb  Example12_9.ipynb  MemberTest.ipynb  RBSTest.ipynb  Section.ipynb  Stasteel_example.ipynb  example_01.ipynb
Examples/Resources/: Example12_9.ipynb
SteelSections/: HE-secpropsdimsprops-Eurocode3-UK-25_10_2023.xlsx
Test/: CompBeam.ipynb  RBSTest.ipynb
Tests/: CompBeam.ipynb  CompBeamExample01.ipynb  CompBeamExample02.ipynb  CompositeBeam.py  Example12_9.ipynb  Stasteel_example.ipynb  test_BasePlate.py
docs/: conf.py  index.rst
src/SteelSections/: HE-secpropsdimsprops-Eurocode3-UK-25_10_2023.xlsx  IPE-secpropsdimsprops-Eurocode3-UK-25_10_2023.xlsx  UPE-secpropsdimsprops-Eurocode3-UK-25_10_2023.xlsx  UPN-secpropsdimsprops-Eurocode3-UK-25_10_2023.xlsx  aisc-shapes-database-v15.0.xlsx
src/steeldesign/: Anchor.py  Anchors.py  BaseConnection.py  BasePlate.py  CompositeBeam.py  ErrorHandler.py  Material.py  Section.py  SteelMemberDesign.py  __init__.py
