[project]
name = "steeldesign"
version = "0.0.4"
authors = [
  { name="Muhammed Sural", email="muhammedsural@gmail.com" },
]
description = "Steel member design"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/muhammedsural/SteelDesign"
"Bug Tracker" = "https://github.com/muhammedsural/SteelDesign/issues"
